# subsonic-player

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commands.rs  main.rs  progress.rs
src/api/: httpClient.ts  pingServer.ts
src/app/components/: image.tsx
src/app/hooks/: use-download.tsx
src/types/http/: clientOptions.ts
src/utils/: tauriTools.ts
